--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,14 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MapsActivity2"
-            android:label="@string/title_activity_maps2"></activity>
+            android:label="@string/title_activity_maps2" />
+        <activity
+            android:name=".studentGeofence"
+            android:label="@string/title_activity_student_geofence">
+
+        </activity>
+        <service android:name=".GeofenceTransitionsIntentService"/>
+
     </application>
 
 </manifest>
