--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:label="@string/title_activity_nearby"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ClassRollActivity" />
-        <activity android:name=".TeacherAcitivity"></activity>
+        <activity android:name=".TeacherAcitivity" />
     </application>
 
 </manifest>
