--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAgJDXXcqzT6pcqC-T7EaXh7PikGWwQvNw" />
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,20 +37,26 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".LocationActivity"
             android:label="@string/title_activity_location"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".NearbyActivity"
             android:label="@string/title_activity_nearby"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".MapsActivity2"
             android:label="@string/title_activity_maps2" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".studentGeofence"
             android:label="@string/title_activity_student_geofence" />
-        <activity android:name=".ClassRollActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ClassRollActivity" />
 
         <service android:name=".GeofenceTransitionsIntentService"/>
 
